scrollbar fix

--- a/styles/customerView.css
+++ b/styles/customerView.css
@@ -191,7 +191,8 @@
     .customerViewContainer{
         width: 100%;
         height: 100%;
-        overflow: scroll;
+        /* overflow: scroll; */
+  overflow: auto;
         top:50%;
         position: absolute;
         background-color: #666;
