--- a/styles/index.css
+++ b/styles/index.css
@@ -10,7 +10,8 @@
 
 html,
 body {
-  overflow: scroll;
+  /* overflow: scroll; */
+  overflow: auto;
   width: 100%;
   height: 100%;
   padding: 0%;
@@ -416,7 +417,8 @@ input[type=number] {
         width: 100%;
         height: 100%;
         background-color: black;
-        overflow: scroll;
+        /* overflow: scroll; */
+  overflow: auto;
         padding: 30px 0px;
     }
     
@@ -493,7 +495,8 @@ input[type=number] {
         width: 100%;
         height: 100%;
         background-color: black;
-        overflow: scroll;
+        /* overflow: scroll; */
+  overflow: auto;
       }
 
       .hideInMobile{
